began api call code

--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
 
                 </form>
                 <h2>Last Search</h2>
-                <p class="history"></p>
+                <div class="history"></div>
             </div>
         </aside>
         <div class="content">
             <div class="content-box">
                 <h2 id="currentDayTime"></h2>
+                <div class="result-box"></div>
 
             </div>
+            <div class="forecast"></div>
         </div>
     </section>
 
