--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 </form>
                 <h2>Last Search</h2>
-                <div class="history"></div>
+                <div class="latest-search"></div>
             </div>
         </aside>
         <div class="content">
